add dao examples

--- a/training-web/src/main/resources/public/update.html
+++ b/training-web/src/main/resources/public/update.html
@@ -5,9 +5,6 @@
   <title></title>
 </head>
 <body>
-这是一个测试 version = 423222
-ssss
-<br>
-<div style="color: #f00;">ssss</div>
+这是一个静态页面
 </body>
 </html>
